# space_y

./: README.md  sequences.md  구축 순서 .md
TODO/: README.md  gimbal_test.cpp
instructions/: PX4_MAVLink.pptx  PX4_PID_CONCEPT.pptx  Px4 기초 개념.pptx
instructions/발표자료/: 1105_권창한_flightmodes.pptx  1112_이준호_github.pptx  README
resources/: aruco_windy.sdf
resources/standard_vtol_sensors/: 4022_gz_standard_vtol_sensors  model.sdf
resources/world/: inner.xml
src/flight/: package.xml
src/flight/src/: flight.cpp  flight_test.cpp  land_test.cpp
src/flight_control/: package.xml
src/flight_control/src/: landing_test_flight.cpp
src/imagery_processing/: setup.py
src/launch_package/: package.xml
src/launch_package/launch/: autoland.launch.py
src/video/: package.xml  setup.py
src/video/video/: aruco_marker.py
temp/: gimbal_test.cpp
tutorial/src/flight/: CMakeLists.txt  package.xml
tutorial/src/flight/src/: flight.cpp  flight_test.cpp  land_test.cpp
ws_KRAC/src/flight_control/: CMakeLists.txt
ws_KRAC/src/flight_control/src/: landing_test.cpp  landing_test_vel.cpp
ws_KRAC/src/flight_control/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ws_KRAC/src/imagery_processing/imagery_processing/: marker_recognition.py
ws_KRAC/src/multirotor/: CMakeLists.txt
ws_KRAC/src/multirotor/src/: flight.cpp  flight_test.cpp  land_test.cpp
